--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,11 +2,11 @@ version: '3.4'
 services:
   frontend:
     build:
-      context: ./apps/frontend
+      context: ./frontend
       dockerfile: Dockerfile
     image: rdss/frontend
     volumes:
-      - ./apps/frontend/src:/opt/rdss/frontend
+      - ./frontend/src:/opt/rdss/frontend
     ports:
       - 3000:3000
     restart: always
@@ -14,19 +14,19 @@ services:
       - database
       - backend
     command: npm run dev
-  backend:
-    build:
-      context: ./apps/backend
-      dockerfile: Dockerfile
-    image: rdss/backend
-    volumes:
-      - ./apps/backend/src:/opt/rdss/backend
-    ports:
-      - 4200:4200
-    restart: always
-    depends_on:
-      - database
-    command: npm start
+  # backend:
+  #   build:
+  #     context: ./apps/backend
+  #     dockerfile: Dockerfile
+  #   image: rdss/backend
+  #   volumes:
+  #     - ./apps/backend/src:/opt/rdss/backend
+  #   ports:
+  #     - 4200:4200
+  #   restart: always
+  #   depends_on:
+  #     - database
+  #   command: npm start
   monitor:
     build:
       context: ./monitor
@@ -37,7 +37,7 @@ services:
       - ./monitor/src:/opt/rdss/monitor
     depends_on:
       - database
-      - backend
+      # - backend
   database:
     image: mongo
     volumes:
