fixes .env.local

--- a/frontend/src/.env.local
+++ b/frontend/src/.env.local
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://root:ch4Ng3m3@localhost:27017/rdss?authSource=admin&readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
+MONGODB_URI=mongodb://admin:Admin123@database:27017/rdss
 MONGODB_DB=rdss
