--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node
 WORKDIR /opt/rdss/frontend
 
-# RUN npm install -g npm@latest
-# RUN npm install
+RUN npm install -g npm@latest
+RUN npm install
 
 CMD "npm run dev"
