--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^3.5.9",
     "next": "latest",
     "next-redux-wrapper": "^7.0.2",
+    "next.js": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -20,5 +21,9 @@
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^7.30.0",
+    "eslint-config-next": "^11.0.1"
+  }
 }
