--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -14,6 +14,7 @@
     "next-redux-wrapper": "^7.0.2",
     "next.js": "^1.0.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
