--- a/frontend/src/.eslintrc
+++ b/frontend/src/.eslintrc
@@ -1,8 +1,8 @@
 {
-  "root": true,
+  "root": false,
   "parserOptions": {
     "plugins": ["react"],
-    "ecmaVersion": 2017
+    "ecmaVersion": 2017,
   },
   "sourceType": "module"
 }
