--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
+    "eslint-plugin-react": "^7.24.0",
     "konva": "^8.1.1",
     "mongodb": "^3.5.9",
     "next": "^11.0.1",
@@ -32,5 +34,9 @@
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
     "use-image": "^1.0.8"
+  },
+  "devDependencies": {
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1"
   }
 }
