--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,9 +7,7 @@ ADD src .
 RUN npm install -g npm@latest
 RUN npm install
 RUN npm install --save-dev eslint eslint-config-next
-# RUN npx next build /opt/rdss/frontend
-# RUN npm run build
-RUN npm -g install serve
+# RUN npx next build
 
-# CMD "npm run dev"
-CMD serve -n out
+CMD "npm run dev"
+# CMD serve -n out
