--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -15,7 +15,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
+    "chart.js": "^3.5.0",
+    "chartjs-plugin-zoom": "^1.1.1",
     "eslint-plugin-react": "^7.24.0",
+    "hammerjs": "^2.0.8",
+    "isodate": "^0.1.4",
     "konva": "^8.1.1",
     "mongodb": "^3.5.9",
     "next": "^11.0.1",
@@ -25,6 +29,7 @@
     "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-confirmation": "^1.0.4",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-4",
     "react-reconciler": "^0.26.2",
