--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
+    "js-cookie": "^3.0.0",
     "konva": "^8.1.1",
     "mongodb": "^3.5.9",
     "next": "^11.0.1",
