--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -18,7 +18,6 @@
     "chart.js": "^3.5.0",
     "chartjs-plugin-zoom": "^1.1.1",
     "eslint-plugin-react": "^7.24.0",
-    "hammerjs": "^2.0.8",
     "isodate": "^0.1.4",
     "js-cookie": "^3.0.0",
     "konva": "^8.1.1",
@@ -32,6 +31,7 @@
     "react-bootstrap-confirmation": "^1.0.4",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-hammerjs": "^1.0.1",
     "react-konva": "^17.0.2-4",
     "react-reconciler": "^0.26.2",
     "react-redux": "^7.2.4",
