--- a/ansible/playbooks/4-rdss_frontend.yaml
+++ b/ansible/playbooks/4-rdss_frontend.yaml
@@ -24,8 +24,8 @@
       dest: /etc/systemd/system
       owner: root
       group: root
-    notify:
-    - "Start frontend"
+    # notify:
+    # - "Start frontend"
   - name: "Start frontend"
     systemd:
       name: webappRDSS
