--- a/ansible/playbooks/3-rdss_monitor.yaml
+++ b/ansible/playbooks/3-rdss_monitor.yaml
@@ -7,7 +7,7 @@
   - name: "Installing Monitor files"
     copy:
       remote_src: true
-      src: /tmp/rdss2/monitor/src
+      src: /tmp/rdss2/monitor/src/
       dest: /opt/rdss/monitor
   - name: "Remove unused monitor entrypoint file"
     file:
