--- a/frontend/src/.env.local
+++ b/frontend/src/.env.local
@@ -1,2 +1,9 @@
+MONGODB_HOST=database
 MONGODB_URI=mongodb://admin:Admin123@database:27017/rdss
 MONGODB_DB=rdss
+
+NEXT_PUBLIC_APIHOST=localhost
+NEXT_PUBLIC_APIPORT=3000
+
+NEXT_PUBLIC_SOCKETSHOST=localhost
+NEXT_PUBLIC_SOCKETSPORT=4200
