--- a/ansible/playbooks/2-rdss_database.yaml
+++ b/ansible/playbooks/2-rdss_database.yaml
@@ -6,6 +6,10 @@
   vars_files:
     - ../vars.yaml
   tasks:
+  - name: Apply Config Template
+    template:
+      src: database_config.j2
+      dest: /tmp/rdss2/database/config/init-mongo.js
   - name: "Loading database init script"
     shell: mongo localhost:27017/rdss --eval "load('/tmp/rdss2/database/config/init-mongo.js')"
   - name: Start mongod service
