--- a/ansible/playbooks/3-rdss_monitor.yaml
+++ b/ansible/playbooks/3-rdss_monitor.yaml
@@ -3,6 +3,8 @@
 - name: Install RDSS Monitor
   hosts: all
   become: true
+  vars_files:
+    - ../vars.yaml
   tasks:
   - name: "Installing Monitor files"
     copy:
@@ -13,6 +15,10 @@
     file:
       path: /opt/rdss/monitor/entrypoint.sh
       state: absent
+  - name: Apply Config Template
+    template:
+      src: monitor_config.j2
+      dest: /opt/rdss/monitor/config.py
   - name: "Installing monitor system service"
     copy:
       remote_src: true
@@ -20,8 +26,6 @@
       dest: /etc/systemd/system
       owner: root
       group: root
-    # notify:
-    # - "Start monitor"
   - name: "Start monitor"
     systemd:
       name: monitorRDSS
