--- a/ansible/main.yaml
+++ b/ansible/main.yaml
@@ -2,6 +2,8 @@
 - name: Install RDSS Software
   hosts: all
   become: true
+  vars_files:
+    - ./vars.yaml
 
 - name: "Installing MongoDB Software"
   import_playbook: playbooks/mongo.yaml
