--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -15,15 +15,17 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
+    "canvas": "^2.8.0",
     "chart.js": "^3.5.0",
     "chartjs-plugin-zoom": "^1.1.1",
     "eslint-plugin-react": "^7.24.0",
     "isodate": "^0.1.4",
     "js-cookie": "^3.0.0",
-    "konva": "^8.1.1",
+    "konva": "^8.1.3",
     "mongodb": "^3.5.9",
     "next": "^11.0.1",
     "next-redux-wrapper": "^7.0.2",
+    "next-transpile-modules": "^8.0.0",
     "next.js": "^1.0.3",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
@@ -31,7 +33,7 @@
     "react-bootstrap-confirmation": "^1.0.4",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
-    "react-konva": "^17.0.2-4",
+    "react-konva": "^17.0.2-5",
     "react-reconciler": "^0.26.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
