--- a/ansible/playbooks/node.yaml
+++ b/ansible/playbooks/node.yaml
@@ -8,16 +8,19 @@
     apt_key:
       url: https://deb.nodesource.com/gpgkey/nodesource.gpg.key
       state: present
+  - name: "Add nodejs 16.x ppa for apt repo"
+    apt_repository:
+      repo: deb https://deb.nodesource.com/node_16.x focal main
+      update_cache: yes
   - name: "Install nodejs"
     apt:
       update_cache: yes
-      pkg:
-      - nodejs
-      - npm
+      name: nodejs
       state: present
-  # - name: "Install NPM-distributed command-line tools"
-  #   npm:
-  #     global: yes
-  #     name: "{{ item }}"
-  #   with_items:
-  #     - npx
+  - name: "Install NPM-distributed command-line tools"
+    npm:
+      global: yes
+      name: "{{ item }}"
+    with_items:
+      - npx
+ 
