--- a/frontend/src/.env.local
+++ b/frontend/src/.env.local
@@ -2,6 +2,7 @@ MONGODB_HOST=192.168.60.78
 MONGODB_URI=mongodb://admin:Admin123@192.168.60.78:27017/rdss
 MONGODB_DB=rdss
 
+NEXT_PUBLIC_APIPROTO=http
 NEXT_PUBLIC_APIHOST=localhost
 NEXT_PUBLIC_APIPORT=3000
 
