--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     depends_on:
       - database
       - monitor
-    command: node server.js
+    command: npm run dev
   monitor:
     build:
       context: ./monitor
