--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -31,6 +31,7 @@
     "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-confirmation": "^1.0.4",
+    "react-c3js": "^0.1.20",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
