--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@date-io/luxon": "^1.3.13",
+    "@material-ui/pickers": "^3.3.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "canvas": "^2.8.0",
@@ -22,11 +24,13 @@
     "isodate": "^0.1.4",
     "js-cookie": "^3.0.0",
     "konva": "^8.1.3",
+    "luxon": "^1.21.3",
     "mongodb": "^3.5.9",
     "next": "^11.0.1",
     "next-redux-wrapper": "^7.0.2",
     "next-transpile-modules": "^8.0.0",
     "next.js": "^1.0.3",
+    "plotly.js": "^2.3.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.1",
@@ -35,6 +39,7 @@
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
+    "react-plotly.js": "^2.5.1",
     "react-reconciler": "^0.26.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
