--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.0",
     "konva": "^8.1.1",
     "mongodb": "^3.5.9",
     "next": "^11.0.1",
     "next-redux-wrapper": "^7.0.2",
     "next.js": "^1.0.3",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.1",
