--- a/ansible/playbooks/4-rdss_frontend.yaml
+++ b/ansible/playbooks/4-rdss_frontend.yaml
@@ -12,7 +12,7 @@
       src: /tmp/rdss2/frontend/src/
       dest: /opt/rdss/frontend
   - name: "Installing dependencies"
-    shell: npm install
+    shell: npm install --save --legacy-peer-deps && npm install @material-ui/core --save --legacy-peer-deps
     args:
       chdir: /opt/rdss/frontend
   - name: "Patching hammerJS"
