--- a/ansible/playbooks/3-rdss_monitor.yaml
+++ b/ansible/playbooks/3-rdss_monitor.yaml
@@ -29,5 +29,5 @@
   - name: "Start monitor"
     systemd:
       name: monitorRDSS
-      state: started
+      state: restarted
       enabled: yes
