+configuracion de atenuación de cada dispositivo en página de alertas

--- a/monitor/Dockerfile
+++ b/monitor/Dockerfile
@@ -8,6 +8,6 @@ WORKDIR /opt/rdss/monitor
 # RUN apt -y install curl socat
 RUN apk add curl socat gcc musl-dev g++
 RUN /usr/local/bin/python -m pip install --upgrade pip
-RUN pip install python-socketio pymongo crccheck pyserial sympy Flask flask_socketio eventlet
+RUN pip install python-socketio pymongo crccheck pyserial sympy Flask flask_socketio eventlet numpy
 
 CMD /bin/sh /entrypoint.sh
