--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     image: rdss/frontend
     volumes:
       - ./frontend/src:/opt/rdss/frontend
+      # - ./frontend/src/node_modules:/opt/rdss/frontend/node_modules
     ports:
       - 3000:3000
       - 5555:5000
@@ -14,6 +15,8 @@ services:
     depends_on:
       - database
       - monitor
+    stdin_open: true
+    tty: true
     command: npm run dev
   monitor:
     build:
