--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,11 +4,13 @@ FROM node:16.12.0
 WORKDIR /opt/rdss/frontend
 
 ADD src .
-RUN npm install -g npm@latest
-RUN npm install
-RUN npm install --save-dev eslint eslint-config-next
+# RUN npm install -g npm@latest
+RUN npm install --force
+RUN npm install next@11.0.1 --force
+RUN npm install --save --legacy-peer-deps && npm install @material-ui/core --save --legacy-peer-deps
+RUN npm install --save-dev eslint eslint-config-next --force
 # RUN npx next build
 
-CMD "npm run dev"
+CMD /usr/bin/env npx next start
 # CMD node server.js
 # CMD serve -n out
