--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,8 +9,11 @@ RUN npm install --force
 RUN npm install next@11.0.1 --force
 RUN npm install --save --legacy-peer-deps && npm install @material-ui/core --save --legacy-peer-deps
 RUN npm install --save-dev eslint eslint-config-next --force
-# RUN npx next build
 
-CMD /usr/bin/env npx next start
+RUN npx browserslist@latest --update-db
+
+# RUN npm run build
+
+CMD npm run start
 # CMD node server.js
 # CMD serve -n out
