--- a/ansible/playbooks/3-rdss_monitor.yaml
+++ b/ansible/playbooks/3-rdss_monitor.yaml
@@ -9,20 +9,20 @@
   - name: "Installing Monitor files"
     copy:
       remote_src: true
-      src: /tmp/rdss2/monitor/src/
-      dest: /opt/rdss/monitor
+      src: {{ temp_dir }}/monitor/src/
+      dest: {{ base_dir }}/monitor
   - name: "Remove unused monitor entrypoint file"
     file:
-      path: /opt/rdss/monitor/entrypoint.sh
+      path: {{ base_dir }}/monitor/entrypoint.sh
       state: absent
   - name: Apply Config Template
     template:
       src: monitor_config.j2
-      dest: /opt/rdss/monitor/config.py
+      dest: {{ base_dir }}/monitor/config.py
   - name: "Installing monitor system service"
     copy:
       remote_src: true
-      src: /tmp/rdss2/monitor/monitorRDSS.service
+      src: {{ temp_dir }}/monitor/monitorRDSS.service
       dest: /etc/systemd/system
       owner: root
       group: root
