--- a/ansible/main.yaml
+++ b/ansible/main.yaml
@@ -10,6 +10,8 @@
 - name: "Installing NodeJS Software"
   import_playbook: playbooks/node.yaml 
 - name: "Installing Python Deps"
+  import_playbook: playbooks/oh-my-zsh.yaml
+- name: "Installing Oh My Zsh"
   import_playbook: playbooks/python-deps.yaml
 - name: "Installing RDSS base"
   import_playbook: playbooks/1-rdss_base.yaml
