--- a/ansible/playbooks/python-deps.yaml
+++ b/ansible/playbooks/python-deps.yaml
@@ -21,4 +21,28 @@
         - flask_socketio
         - eventlet
         - numpy
-  
+
+  - name: Dependencies
+    apt:
+        name:
+            - htop
+            - git
+            - curl
+            - zsh
+            - vim
+        state: present
+    register: output
+
+  - name: Install zsh-autosuggestions plugin for all users
+    git:
+      repo: "https://github.com/zsh-users/zsh-autosuggestions"
+      dest: "/usr/share/oh-my-zsh/custom/plugins/zsh-autosuggestions"
+      clone: yes
+      version: master
+
+  - name: Install zsh-syntax-highlighting plugin for all users
+    git:
+      repo: "https://github.com/zsh-users/zsh-syntax-highlighting"
+      dest: "/usr/share/oh-my-zsh/custom/plugins/zsh-syntax-highlighting"
+      clone: yes
+      version: master
