--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@date-io/luxon": "^1.3.13",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
@@ -49,7 +50,7 @@
     "use-image": "^1.0.8"
   },
   "devDependencies": {
-    "eslint": "^7.31.0",
-    "eslint-config-next": "^11.0.1"
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.4"
   }
 }
