+crud groups  and fields

--- a/frontend/src/.env.local
+++ b/frontend/src/.env.local
@@ -1,10 +1,10 @@
-MONGODB_HOST=localhost
-MONGODB_URI=mongodb://admin:Admin123@localhost:27017/rdss
+MONGODB_HOST=database
+MONGODB_URI=mongodb://admin:Admin123@database:27017/rdss
 MONGODB_DB=rdss
 
 NEXT_PUBLIC_APIPROTO=http
 NEXT_PUBLIC_APIHOST=localhost
 NEXT_PUBLIC_APIPORT=3000
 
-NEXT_PUBLIC_SOCKETSHOST=192.168.60.231  //era 230 MEMO
+NEXT_PUBLIC_SOCKETSHOST=localhost
 NEXT_PUBLIC_SOCKETSPORT=4200
