--- a/frontend/src/.env.local
+++ b/frontend/src/.env.local
@@ -6,5 +6,5 @@ NEXT_PUBLIC_APIPROTO=http
 NEXT_PUBLIC_APIHOST=localhost
 NEXT_PUBLIC_APIPORT=3000
 
-NEXT_PUBLIC_SOCKETSHOST=localhost
+NEXT_PUBLIC_SOCKETSHOST=192.168.60.76
 NEXT_PUBLIC_SOCKETSPORT=4200
