--- a/ansible/main.yaml
+++ b/ansible/main.yaml
@@ -11,8 +11,8 @@
   import_playbook: playbooks/node.yaml 
 - name: "Installing Python Deps"
   import_playbook: playbooks/python-deps.yaml
-#- name: "Installing Oh My Zsh"
-#  import_playbook: playbooks/oh-my-zsh.yaml
+- name: "Installing Oh My Zsh"
+  import_playbook: playbooks/oh-my-zsh.yaml
 - name: "Installing RDSS base"
   import_playbook: playbooks/1-rdss_base.yaml
 - name: "Configuring and running RDSS database"
