--- a/ansible/playbooks/1-rdss_base.yaml
+++ b/ansible/playbooks/1-rdss_base.yaml
@@ -15,7 +15,7 @@
       repo: https://{{gitlabuser | urlencode}}:{{gitlabpassword | urlencode}}@gitlab.com/sigma-telecom/rdss-software.git
       dest: /tmp/rdss2
       # single_branch: yes
-      version: development
+      version: main
       accept_hostkey: yes
   - name: "Create installation directory"
     file:
