--- a/rdss_software/ansible/playbooks/4-rdss_frontend.yaml
+++ b/rdss_software/ansible/playbooks/4-rdss_frontend.yaml
@@ -42,3 +42,17 @@
       name: frontendRDSS
       state: restarted
       enabled: yes
+  - name: "Move change_ip.sh"
+    command: mv /opt/rdss/frontend/change_ip.sh /opt/rdss/
+
+  - name: "Set execute permissions on change_ip.sh"
+    file:
+      path: /opt/rdss/change_ip.sh
+      mode: '0755'
+      
+  - name: "Add cronjob for change_ip.sh"
+    cron:
+      name: "Run change_ip.sh at reboot"
+      special_time: reboot
+      user: root
+      job: "/opt/rdss/change_ip.sh"
