[FIX] add rdss software files because it was replaced by sniffer software

--- a/rdss_software/ansible/playbooks/3-rdss_monitor.yaml
+++ b/rdss_software/ansible/playbooks/3-rdss_monitor.yaml
@@ -9,7 +9,7 @@
   - name: "Installing Monitor files"
     copy:
       remote_src: true
-      src: /tmp/rdss2/monitor/src/
+      src: /tmp/rdss2/rdss_software/monitor/src/
       dest: /opt/rdss/monitor
   - name: "Remove unused monitor entrypoint file"
     file:
@@ -22,7 +22,7 @@
   - name: "Installing monitor system service"
     copy:
       remote_src: true
-      src: /tmp/rdss2/monitor/monitorRDSS.service
+      src: /tmp/rdss2/rdss_software/monitor/monitorRDSS.service
       dest: /etc/systemd/system
       owner: root
       group: root
