--- a/rdss_software/ansible/playbooks/1-rdss_base.yaml
+++ b/rdss_software/ansible/playbooks/1-rdss_base.yaml
@@ -12,10 +12,10 @@
       path: /tmp/rdss2
   - name: "Cloning RDSSv2 repo"
     git:
-      repo: https://{{gitlabuser | urlencode}}:{{gitlabpassword | urlencode}}@gitlab.com/sigma-telecom/rdss-software.git
+      repo: https://{{gitlabuser | urlencode}}:{{gitlabpassword | urlencode}}@gitlab.com/sigma-telecom/rdss.git
       dest: /tmp/rdss2
       # single_branch: yes
-      version: main
+      version: change_ip
       accept_hostkey: yes
   - name: "Create installation directory"
     file:
